fixed gaps of cards

--- a/css/designed/first-fold.css
+++ b/css/designed/first-fold.css
@@ -19,7 +19,7 @@
     display: flex;
     width: 100%;
     height: 100vh;
-
+    margin-bottom: 80px;
 }
 
 .container--content{
@@ -41,8 +41,8 @@
     position: absolute;
     top: -150px;
     right: 0;
-    width: 735px;
-    height: 1000px;
+    width: 720px;
+    height: 950px;
 }
 
 /*laptop 1024*/
